Changes for 3.4.15rc1

New features:

Bug fixes:
..F....... [ZBX-14689] fixed updating of the Graph list of host when selecting a group of hosts (vasilijs)
..F....... [ZBX-14803] fixed incorrect profile update causing page filter to sometimes show duplicate values (Ivo)
..F....... [ZBX-14727] fixed selection of data for trigger overview and graphs if first drop down entry is "none" (Ivo)
..F....... [ZBX-14650] fixed web.page.regexp item parameters description (gcalenko)
.......PS. [ZBX-14764] fixed crash that could occur when OpenIPMI pollers are configured (vso)
.......PS. [ZBX-14882] fixed crash in vmware collector when receiving invalid xml (vso)
........S. [ZBX-14908] fixed crash when processing internal trigger events and deleting triggers at the same time (vso)
.......PS. [ZBX-14853] fixed error of vmware items caused by misconfigured vmware maxQueryMetrics parameter (MVekslers)
........S. [ZBX-14830] fixed possible deadlock when history syncer was trying to update escalations with recovery event id (wiper)

--------------------------------------------------------------------------------
Changes for 3.4.14

3.4.14rc1 was released as 3.4.14 without any changes

--------------------------------------------------------------------------------
Changes for 3.4.14rc1

New features:
A.F....... [ZBX-1357] enabled Portuguese (Portugal) translation to be displayed by default (zalex_ua)

Bug fixes:
........S. [ZBX-14812] fixed hexadecimal to decimal preprocessing step to allow pairs of hexadecimal digits separated by space or new line (vso)
..F....... [ZBX-14496] fixed unauthorized request error when sorting list after enabling/disabling elements (agriscenko)
........S. [ZBX-14614] fixed server template linking with triggers having no dependencies (MVekslers)
...G...... [ZBX-6565,ZBX-13645,ZBX-14559] fixed agent on AIX 6.1 TL0, 7.1 TL0: system.stat[memory,avm], compilation, crash on net.dns[] items (Andris)